--- a/app/assets/stylesheets/contact_layout.css.scss
+++ b/app/assets/stylesheets/contact_layout.css.scss
@@ -381,3 +381,14 @@ text-align: left;
 	color: #fff;
 	text-decoration: none;
 }
+.small_quote {
+	font-size: 22px !important;
+	padding-left:0px;
+}
+.pull-left {
+	float: left;
+}
+
+.pull-right {
+	float: right;
+}
