--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,11 @@
   <section id="header" class="section">
     <div class="header-content">
       <div class="header-content-inner">
-        <!-- nothing yet -->
+        <div class="visible-xs">
+          <h1>WELCOME TO THE NEW</h1>
+          <br><br>
+          <h1 class="page_title">ICE AGE</h1>
+        </div>
       </div>
     </div>
     <%= render "layouts/flash_messages" %>
