--- a/app/views/home/sell_with_us.html.erb
+++ b/app/views/home/sell_with_us.html.erb
@@ -5,6 +5,7 @@
       <p class="top letter-spaced text-uppercase">My listings get "sold"</p>
     </div>
     <h1 class="page_title">MY OBJECTIVE IS NOT TO GET IT LISTED…</h1>
+    <h4 class="subheading">IT’S TO GET IT SOLD!</h4>
     <br><br>
     <div class="heading">
       <p>TREB listings to sales ratio's</p>
@@ -54,44 +55,44 @@
         </div>
         <div class="row objective-row">
           <div class="col-md-3">
-            <span>1</span>
+            <span><%= image_tag "sales-icon-1.png", height: "40px" %></span>
             <h3>Professionally Designed Printed & Emailed Property Feature Sheets</h3>
             <p>Every Feature Sheet Directs Potential Buyers to Your Virtual Tour</p>
           </div>
            <div class="col-md-3">
-            <span>2</span>
+            <span><%= image_tag "sales-icon-2.png", height: "40px" %></span>
             <h3>For Sale Sign<br>On The Yard</h3>
             <p>24Hr Marketing Display</p>
           </div>
           <div class="col-md-3">
-            <span>3</span>
+            <span><%= image_tag "sales-icon-3.png", height: "40px" %></span>
             <h3>Mass Email To Agents, Potential And Existing Clients</h3>
             <p>Directed To A Target Market</p>
           </div>
           <div class="col-md-3">
-            <span>4</span>
+            <span><%= image_tag "sales-icon-4.png", height: "40px" %></span>
             <h3>Constant Follow-up From Start-to-Sold-to-Close</h3>
             <p>Communication With Realtors And Potential Buyers For Their Feedback</p>
           </div>
         </div>
         <div class="row objective-row">
           <div class="col-md-3">
-            <span>5</span>
+            <span><%= image_tag "sales-icon-5.png", height: "40px" %></span>
             <h3>Open Houses</h3>
             <p>Realtor and Public Open Houses</p>
           </div>
            <div class="col-md-3">
-            <span>6</span>
+            <span><%= image_tag "sales-icon-6.png", height: "40px" %></span>
             <h3>Print Advertising</h3>
             <p>Local Newspapers, Magazines, and Flyers.</p>
           </div>
           <div class="col-md-3">
-            <span>7</span>
+            <span><%= image_tag "sales-icon-7.png", height: "40px" %></span>
             <h3>Endless Online<br>Exposure</h3>
             <p>Syndication Of The Listing To Numerous Web-sites And Social Media Platforms</p>
           </div>
           <div class="col-md-3">
-            <span>8</span>
+            <span><%= image_tag "sales-icon-8.png", height: "40px" %></span>
             <h3>Just Listed<br>Cards</h3>
             <p>Our Just Listed Marketing Cards Target Immediate Area of the Property</p>
           </div>
