--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,8 +19,8 @@
     <hr>
 
     <div class="row">
-      <div class="col-xs-6">12 &amp; 14 YORK ST, TORONTO, ON, CANADA</div>
-      <div class="col-xs-6">
+      <div class="col-md-6">12 &amp; 14 YORK ST, TORONTO, ON, CANADA</div>
+      <div class="col-md-6">
         <div class="pull-right">© 2015. ALL RIGHTS RESERVED</div>
       </div>
     </div>
