--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -17,7 +17,7 @@
               <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div ng-class="{active : $first, item : true}" ng-repeat="img in listing.images" data-slide-number="{{$index}}">
-                    <img ng-src="{{img}}" alt="" onerror="this.onerror=null;this.src='/missing-image.png';"/>
+                    <img ng-src="{{img}}" alt="" style="height:400px !important;" onerror="this.onerror=null;this.src='/missing-image.png';" />
                   </div>
                 </div>
               </div>
