--- a/config/recipes/templates/nginx_unicorn_production.erb
+++ b/config/recipes/templates/nginx_unicorn_production.erb
@@ -102,7 +102,7 @@ server {
     listen       80;
 
     client_max_body_size 4G;
-    server_name icecondos.com;
+    server_name _;
 
     # ~2 seconds is often enough for most folks to parse HTML/CSS and
     # retrieve needed images/icons/frames, connections are cheap in
