New S3 Creds + host

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -107,7 +107,7 @@
               <li ng-repeat="o_listing in listings">
                 <div class="property-box">
                   <div class="imagebox">
-                    <img ng-src="http://icecondos.s3.amazonaws.com/listing_photos/listing_{{o_listing.id}}_0.jpg" onerror="this.onerror=null;this.src='/missing-image.png';">
+                    <img ng-src="http://icecondos2.s3.amazonaws.com/listing_photos/listing_{{o_listing.id}}_0.jpg" onerror="this.onerror=null;this.src='/missing-image.png';">
                   </div>
                   <div class="place">
                     {{(o_listing.municipality | uppercase) || "NOT AVAILABLE"}}
