--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -7953,7 +7953,7 @@ transition: all 500ms ease-in-out;-webkit-transition: all 500ms ease-in-out;}
 .active .hamburger > span:after {transform: rotate(-45deg);-webkit-transform: rotate(-45deg);-moz-transform: rotate(-45deg);-ms-transform: rotate(-45deg);-o-transform: rotate(-45deg);}
 
 
-.nav-menu{width:370px;position:fixed;top:81px;bottom:0;background-color:#000;z-index:1030;box-shadow:-1px 0 2px rgba(0,0,0,.2);-webkit-box-shadow:-1px 0 2px rgba(0,0,0,.2);padding:15px 0px;text-align: right;
+.nav-menu{width:370px;position:fixed;top:81px;bottom:0;background-color:white;z-index:1030;box-shadow:-1px 0 2px rgba(0,0,0,.2);-webkit-box-shadow:-1px 0 2px rgba(0,0,0,.2);padding:15px 0px;text-align: right;
 right: -100%;-webkit-transition: all 350ms;transition: all 350ms;}
 .nav-menu .nav > li > a{font-size: 16px;font-family: 'gotham_htf_book', 'Open Sans', 'Helvetica Neue', Arial, sans-serif;color: #c4b257;border-top:1px solid #161616;line-height: 20px;padding-right:50px;background-color:transparent!important;font-weight:100;letter-spacing: 3px;color:#444; margin-top: 5px;}
 .nav-menu .nav > li:first-child > a {
